# cmake_template

./: CMakeLists.txt  README.md
exec1/: CMakeLists.txt  main.cpp
exec1/include/: printing.h
exec1/test/: main.cpp
sub1/: CMakeLists.txt
sub1/src/: first.cpp
sub1/test/: CMakeLists.txt  main.cpp
sub2/: CMakeLists.txt
sub2/include/: second.h
sub2/src/: second.cpp
sub2/test/: CMakeLists.txt
test/: CMakeLists.txt
